Versión que imprime y regresa a página de inicio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <link rel="stylesheet" href="style.css">
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
+  <script language="javascript" type="text/javascript" src="P5PRUEB.js"></script>
   <script language="javascript" type="text/javascript" src="prueba.js"></script>
+  <script language="javascript" type="text/javascript" src="huella.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
 
